<resources>
    <string name="app_name">Assignment 1</string>
    <string name="main_logo">main logo</string>
    <string name="full_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="retype_password">Retype Password</string>
    <string name="signup">Sing Up</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="exit">Exit</string>
    <string name="back_button">Back Button</string>
    <string name="one">One</string>
    <string name="two">Two</string>
    <string name="three">Three</string>
    <string name="gui_demo_21l_5843">GUI Demo (21L-5843)</string>
    <string name="home_button">Home Button</string>
</resources>